# barc_lite

./: .gitignore  README.md
me131_docker/: docker_readme.md  project_readme.md
me131_docker/docker/: Dockerfile
notebooks/: compute_raceline.ipynb  plot_run_data.ipynb  track_demo.ipynb
workspace/: copy_and_build.sh
workspace/src/barc_launch/: README.md
workspace/src/barc_launch/barc_launch/: CMakeLists.txt  package.xml
workspace/src/barc_launch/barc_launch/config/barc_sim_ltv_mpc/: visualization.yaml
workspace/src/barc_launch/barc_launch/config/barc_sim_pid/: global_params.yaml  qos_settings.yaml  visualization.yaml
workspace/src/barc_launch/barc_launch/config/barc_sim_pid_bag/: visualization.yaml
workspace/src/barc_launch/barc_launch/config/barc_sim_project/: visualization.yaml
workspace/src/barc_launch/barc_launch/launch/barc_sim_ltv_mpc/: barc_sim_ltv_mpc.launch.py
workspace/src/barc_launch/barc_launch/launch/barc_sim_pid/: barc_sim_pid.launch.py
workspace/src/barc_launch/barc_launch/launch/barc_sim_pid_bag/: barc_sim_pid_bag.launch.py
workspace/src/barc_launch/barc_launch/launch/barc_sim_project/: barc_sim_project.launch.py
workspace/src/mpclab_common/: README.md
workspace/src/mpclab_common/mpclab_common/: CMakeLists.txt  package.xml
workspace/src/mpclab_common/mpclab_common/lib/mpclab_common/: mpclab_base_nodes.py  pytypes.py  rosbag_utils.py  track.py
workspace/src/mpclab_common/mpclab_common/lib/mpclab_common/models/: abstract_model.py  dynamics_models.py  model_types.py
workspace/src/mpclab_common/mpclab_common/lib/mpclab_common/tracks/: base_track.py  cubic_spline_track.py  generate_raceline.py  generate_tracks.py  poly_raceline_tracks.py  radius_arclength_track.py  track_lib.py  waypoint_projection_track.py
workspace/src/mpclab_common/mpclab_common/msg/: PredictionMsg.msg  VehicleStateMsg.msg
workspace/src/mpclab_controllers/: README.md
workspace/src/mpclab_controllers/mpclab_controllers/: CMakeLists.txt  README.md  package.xml
workspace/src/mpclab_controllers/mpclab_controllers/lib/mpclab_controllers/: CA_LTV_MPC.py  PID.py  abstract_controller.py  keyboard.py  project_controller.py
workspace/src/mpclab_controllers/mpclab_controllers/nodes/: py_keyboard_node.py  py_ltv_mpc_node.py  py_ol_node.py  py_pid_node.py  py_project_node.py
workspace/src/mpclab_estimation/: README.md
workspace/src/mpclab_estimation/mpclab_estimation/: CMakeLists.txt  package.xml
workspace/src/mpclab_estimation/mpclab_estimation/nodes/: py_optitrack_pass_through_estimator_node.py
workspace/src/mpclab_simulation/: README.md
workspace/src/mpclab_simulation/mpclab_python_simulation/scripts/: test_pid.py
workspace/src/mpclab_simulation/mpclab_python_simulation/scripts/MPC/: CA_LTV_MPC.py  (+9 more)
workspace/src/mpclab_simulation/mpclab_simulation/: CMakeLists.txt  package.xml
workspace/src/mpclab_simulation/mpclab_simulation/lib/mpclab_simulation/: __init__.py  abstractSensor.py  dynamics_simulator.py  imu_simulator.py  optitrack_simulator.py  sim_types.py  simulated_sensors.py
workspace/src/mpclab_simulation/mpclab_simulation/nodes/: py_sim_dynamics_node.py  py_sim_imu_node.py  py_sim_optitrack_node.py
workspace/src/mpclab_visualizations/mpclab_visualizations/: CMakeLists.txt  package.xml
workspace/src/mpclab_visualizations/mpclab_visualizations/nodes/: py_vis_qt_node.py
(+24 files in other folders)
